RESOLVED FIXED135755
Services overlay dropdown is often in the wrong place with zoomed pages or horizontal scrolling
https://bugs.webkit.org/show_bug.cgi?id=135755
Summary Services overlay dropdown is often in the wrong place with zoomed pages or ho...
Tim Horton
Reported 2014-08-08 02:53:42 PDT
DDHighlightCreateWithRectsInVisibleRectWithStyleAndDirection adjust the location of the button based on the visible rect, trying to keep the button visible. We're handing it the wrong visible rect, though, not taking scrolling into account. This leads to pages that scroll horizontally showing the button on the left even if there's space for it on the right, or sometimes not showing it at all. <rdar://problem/17907752>
Attachments
patch (3.38 KB, patch)
2014-08-08 02:56 PDT, Tim Horton
beidson: review+
Tim Horton
Comment 1 2014-08-08 02:56:03 PDT
Tim Horton
Comment 2 2014-08-08 09:23:05 PDT
Note You need to log in before you can comment on or make changes to this bug.